[package]
name = "virtualnet"
version = "0.1.0"
authors = ["Nikita Baksalyar <nikita.baksalyar@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
smoltcp = { git = "https://github.com/nbaksalyar/smoltcp.git", branch = "lowlvl", default-features = false, features = [ "std", "socket-udp", "proto-ipv4", "ethernet" ] }
